# sdl-blit-benchmark

./: CMakeLists.txt  blit_test.c  white_noise.c
