cmake_minimum_required(VERSION 3.5)
project(white_noise)
find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3)
add_executable(white_noise white_noise.c)
add_executable(blit_test blit_test.c)
target_link_libraries(white_noise PRIVATE SDL3::SDL3)
target_link_libraries(blit_test PRIVATE SDL3::SDL3)
